@startuml
'https://plantuml.com/class-diagram

Employee <|-- SalaryTime
Employee <|-- SalaryPieceWork
SalaryTime  <|-- SalaryTimeBonus

SalaryTimeBonus ..|> PayrollSystem
SalaryPieceWork ..|> PayrollSystem
SalaryTime ..|> PayrollSystem

class Employee {
  id_employee
  name
  payment_rate
}

class SalaryTime {
    calculate_payroll()
}

class SalaryPieceWork {
    calculate_payroll()
}

class SalaryTimeBonus {
    calculate_payroll()
}

class PayrollSystem {
  id_employee
  name
  payment_rate
  calculate_payroll()
}

@enduml